@@ -259,6 +259,12 @@ apr_status_t modsecurity_tx_init(modsec_rec *msr) {
         }
     }
 
+    /* Check if we are forcing buffering, then use memory only. */
+    if (msr->txcfg->reqbody_buffering) {
+        msr->msc_reqbody_storage = MSC_REQBODY_MEMORY;
+        msr->msc_reqbody_spilltodisk = 0;
+    }
+
     /* Initialise arguments */
     msr->arguments = apr_table_make(msr->mp, 32);
     if (msr->arguments == NULL) return -1;
